tests/paczka2/big_fuzzy/29717706.err
Error in line 1: m4uQI8W A426 13,6
Error in line 7: zzv04yRoRt A717 83,4
Error in line 5: m4uQI8W S768 96,0
Error in line 26: m4uQI8W A88 7,65
Error in line 34: AP7j A717 20,3
Error in line 32: VCaGTi6G01 S768 25,0
Error in line 41: VCaGTi6G01 A426 6,7
Error in line 60: zzv04yRoRt A88 32,16
Error in line 20: m4uQI8W A88 27,7
Error in line 61: m4uQI8W A426 4,4
Error in line 54: zzv04yRoRt A88 24,9
Error in line 50: AP7j A717 90,7
Error in line 72: S768 A88 97,8
Error in line 73: M4A5J A426 21,5
Error in line 87: m4uQI8W A426 423,5
Error in line 90: m4uQI8W S768 13,1
Error in line 95: M4A5J S768 58,9
Error in line 109: AP7j A88 32,7
Error in line 113: S768 A426 \5,4
Error in line 108: M4A5J A88 24,4
Error in line 110: AP7j S768 42,3
Error in line 120: AP7j A88 57,4
Error in line 118: VCaGTi6G01 S768 67,9
Error in line 130: M4A5J A88 95,9
Error in line 132: M4A5J S768 63,0
Error in line 136: S768 A717 80,7
Error in line 140: AP7j A426 172,4
Error in line 163: AP7j S768 74,2
Error in line 160: VCaGTi6G01 S768 56,1
Error in line 172: M4A5J A88 7,8
Error in line 173: zzv04yRoRt S768 36,4
Error in line 185: m4uQI8W A88 15,9
Error in line 189: m4uQI8W A717 35,0
Error in line 200: VCaGTi6G01 S768 53,8
Error in line 216: M4A5J A426 36,5
Error in line 230: AP7j S768 50,6
Error in line 237: m4uQI8W S768 3,8
Error in line 238: xdeSat A426 26,2
Error in line 247: xdeSat A88 2,4
